<resources>
    <string name="app_name">fitplus</string>
    <string name="diet">Diet</string>
    <string name="bmi">BMI</string>
    <string name="exercise">Exercise</string>
    <string name="calculate">Calculate</string>
    <string name="female">Female</string>

    <string name="male">Male</string>
    <string name="re_calculate_your_bmi">Re-Calculate your BMI</string>
    <string name="title_activity_gender1">gender1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="period_tracker"><![CDATA[Period & Tracker]]></string>
    <string name="title_activity_video_girl">VideoActivity_girl</string>
</resources>