<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/centerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints">


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerVerticalLine"
        tools:ignore="MissingConstraints">
    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/poster2" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="371dp"
        android:layout_height="208dp"
        android:background="@drawable/cardbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.237">

        <pl.droidsonroids.gif.GifImageButton
            android:id="@+id/exerciseCard"
            android:layout_width="345dp"
            android:layout_height="162dp"
            android:layout_above="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="0dp"
            android:background="@color/white"
            android:src="@drawable/pushup">

        </pl.droidsonroids.gif.GifImageButton>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="129dp"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="0dp"
            android:text="@string/exercise"
            android:textColor="@color/lightBlue"
            android:textSize="28dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diet"
        android:layout_width="173dp"
        android:layout_height="206dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/centerVerticalLine"
        android:background="@drawable/cardbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bmi2"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.444">


        <ImageButton
            android:id="@+id/DietCard"
            android:layout_width="157dp"
            android:layout_height="152dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="41dp"
            app:srcCompat="@drawable/food" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/diet"
            android:textColor="@color/lightBlue"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bmi2"
        android:layout_width="162dp"
        android:layout_height="207dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/cardbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.47">

        <ImageButton
            android:id="@+id/bmiCard"
            android:layout_width="139dp"
            android:layout_height="155dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="43dp"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bmi"
            android:textColor="@color/lightBlue"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

