<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".bmi">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerHorizontal">


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerVerticalLine">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@+id/centerVerticalLine"
        android:background="@drawable/cardbackground">


        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/male1">

        </ImageView>

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@+id/centerVerticalLine"
        android:background="@drawable/cardbackground"
        android:layout_above="@+id/heightLayout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/female">


        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female222">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/lightBlue"
            android:id="@+id/textfemale"
            android:text="@string/female"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center">

        </TextView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/centerVerticalLine"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Weight"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="55"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/lightBlue">

            <ImageView
                android:id="@+id/decrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus">

            </ImageView>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/incrementWeight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/plus">

            </ImageView>


        </RelativeLayout>


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@+id/centerVerticalLine"
        android:layout_below="@+id/heightLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/cardbackground"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/age">

        <TextView
            android:id="@+id/textAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Age"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="22"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:background="@color/lightBlue"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementage">

            </ImageView>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/incrementAge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/plus">

            </ImageView>



        </RelativeLayout>









    </RelativeLayout>













<RelativeLayout
    android:layout_width="340dp"
    android:layout_height="150dp"
    android:layout_above="@+id/centerHorizontal"
    android:layout_marginBottom="-50dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/cardbackground"
    android:id="@+id/heightLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Height"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="170"
        android:layout_marginBottom="50dp"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/lightBlue"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:id="@+id/currentHeight">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cm"
        android:textSize="20sp"
        android:textColor="@color/lightBlue"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/currentHeight"
        android:layout_marginStart="20sp">

    </TextView>

    <SeekBar
        android:id="@+id/seekbarforheight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:progressTint="#FF4C4C"
        android:thumbTint="@color/lightBlue">

    </SeekBar>
</RelativeLayout>


    <android.widget.Button
        android:id="@+id/calculateBmi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="63dp"
        android:background="@drawable/cardbackground"
        android:text="@string/calculate"
        android:textColor="@color/lightBlue"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>


</RelativeLayout>